# pr2-c01-david-eric

./: .gitignore  README.md
.github/workflows/: docs.yml  test.yml
backend/: pyproject.toml
backend/battleship/: settings.py  urls.py
backend/battleship/api/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/battleship/tests/: __init__.py  test_docs.py  test_health.py
docs/: book.toml
docs/src/: SUMMARY.md  about.md  beta-testing.md  self-testing.md
frontend/: README.md  index.html  package-lock.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: base.css  main.css
frontend/src/components/: DockingArea.vue  GameBoard.vue  Header.vue  assetHelper.js
frontend/src/router/: index.js
frontend/src/services/: api.js  auth.js  auth_teachers.js
frontend/src/store/: authStore.js  authStore_teachers.js  index.js
frontend/src/views/: Game.vue  Home.vue
