[project]
name = "battleship"
description = "UB SD PR2 - Battleship Backend"
authors = [
    {name="Xavier BaroÌ", email="<xbaro@ub.edu>"},
    {name="Kaisar Kushibar", email="<kaisar.kushibar@ub.edu>"},
    {name="Eloi Puertas", email="<epuertas@ub.edu>"},
]
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.0.6)",
    "djangorestframework (>=3.15.1)",
    "drf-spectacular (>=0.27.2)",
    "drf-spectacular-sidecar (>=2024.6.1)",
    "django-health-check (>=3.18.3)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "drf-nested-routers (>=0.94.1,<0.95.0)",
]

[project.urls]
homepage = "https://github.com/SoftwareDistribuitUB-2025/Enunciat_P2/"

[tool.poetry]
version = "0.1.0"
package-mode = false
packages = [{ include = "battleship" }, { include = "api" }, { include = "tests" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pylint = "^3.2.2"
allure-pytest = "^2.13.5"
coverage = "^7.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
